--- a/tests/parser/html_file.html
+++ b/tests/parser/html_file.html
@@ -15,12 +15,12 @@
 <div>
     <div>
         <p>
-           {{ __("This text also should be parsed 1", comment="This comment should exist") }}
+           {{ __("'This text also should be parsed 1", comment="This comment should exist") }}
         </p>
         <p>
-           {{ __( '''"
+           {{ __( ''''
                     This text also should be parsed 2"
-                ''', comment="'This comment', '''should''' exist") }}
+                ''', comment="'This comment', '''should''' be just one comment") }}
         </p>
         <p>
            {{ __("This text also should be parsed 3 {text}".format(text="'''true''', or false"), comment="This comment, should exist {}"
