--- a/tests/parser/html_file.html
+++ b/tests/parser/html_file.html
@@ -23,7 +23,8 @@
                 ''', comment="'This comment', '''should''' be just one comment") }}
         </p>
         <p>
-           {{ __("This text also should be parsed 3 {text}".format(text="'''true''', or false"), comment="This comment, should exist {}"
+           {{ __("This text also should be parsed 3 {text}".format(text="'''true''', or false"),
+                comment="This comment, should exist {}"
                 .format("do not use them like this. It would mess the comment, section.")
             }}
         </p>
